# dkraczkowski.github.io

./: .gitignore  .gitmodules  README.md
articles/building-recruitment-process/: README.md  review_guide.md
articles/ci_pipeline_python_aws/: .env  Makefile  README.md
articles/ci_pipeline_python_aws/src/my_project/: handler.py
articles/crafting-data-processing-pipeline/: README.md  pyproject.toml
articles/crafting-data-processing-pipeline/src/: README.md
articles/crafting-data-processing-pipeline/src/example/: context.py  data_validation.py  format_validation.py  uniqueness_validation.py  user_creation.py
articles/crafting-data-processing-pipeline/src/pipeline/: pipeline.py
articles/crafting-data-processing-pipeline/src/pipeline/steps/: data_validation.py  format_validation.py  uniqueness_validation.py  user_creation.py
articles/crafting-data-processing-pipeline/tests/: conftest.py  end_to_end_test.py  pipeline_test.py
articles/crafting-data-processing-pipeline/tests/example/: data_validation_test.py  end_to_end_test.py  format_validation_test.py  uniqueness_validation_test.py  user_creation_test.py
articles/crafting-data-processing-pipeline/tests/fixtures/: users.yaml  valid_data.csv  valid_data.xml
articles/crafting-data-processing-pipeline/tests/steps/: data_validation_test.py  format_validation_test.py  uniqueness_validation_test.py  user_creation_test.py
articles/github_actions_python_aws/: README.md  pyproject.toml
articles/github_actions_python_aws/.github/workflows/: ci_workflow.yml
articles/github_actions_python_aws/tests/: test_example.py
articles/parametrize_your_fixutres/: README.md  pyproject.toml
articles/parametrize_your_fixutres/src/example_code/: __init__.py
articles/parametrize_your_fixutres/tests/: conftest.py  test_fixture.py
articles/parametrize_your_fixutres/tests/fixtures/: pets.json
articles/propagating-events-from-domain-entity/: README.md  pyproject.toml
articles/propagating-events-from-domain-entity/src/domain/: entity.py  event.py  money.py  wallet.py  wallet_event_as_a_result_of_method_invocation.py  wallet_event_bus_injection.py  wallet_internal_event_collection.py  wallet_static_publication_mechanism.py
articles/propagating-events-from-domain-entity/tests/domain/: event_as_a_result_of_method_invocation_test.py  event_bus_injection_test.py  event_test.py  internal_event_collection_test.py  money_test.py  static_publication_mechanism_test.py
articles/technical-debt-thoughts/: README.md
articles/utils-common-pitfalls/: README.md
