[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Dawid Kraczkowski <dawid.kraczkowski@kaizenreporting.com>"]
description = "Crafting a CI Pipeline: My Experience with GitHub Actions, Python and AWS"
name = "ci_pipeline"
packages = [
  {from = "src", include = "my_project"},
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
coverage = "^7.2.7"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
ruff = "^0.0.280"

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report term-missing --no-cov-on-fail"
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.coverage.report]
exclude_lines = [
  "...",
  "def __repr__",
  "def bootstrap_",
  "if 0:",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "nocov",
  "pass",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError"
]
fail_under = 80
show_missing = true

[tool.coverage.run]
branch = true
omit = [
  "tests/*"
]
source = [
  "src/mycode/*"
]

[tool.isort]
combine_as_imports = "true"
force_grid_wrap = 0
include_trailing_comma = "true"
known_first_party = "src"
line_length = 120
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "ANN", "ARG", "B", "BLE", "C", "COM", "D", "DJ", "DTZ", "E", "EM", "ERA", "EXE", "F", "FBT", "G", "I", "ICN", "INP", "ISC", "N", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SIM", "SLF", "T", "TCH", "TID", "TRY", "UP", "W", "YTT"]
ignore = []
# Same as Black.
line-length = 120
# Enable pycodestyle (`E`) codes by default.
select = ["E"]
# Assume Python 3.11
target-version = "py311"
unfixable = []

[tool.ruff.mccabe]
max-complexity = 8
